Grok changes
************

0.10.3
======

* ...

0.10.2 (2007-10-24)
===================

Bug fixes
---------

* Remove zc.recipe.egg, zc.recipe.filestorage, zc.recipe.testrunner,
  zc.zope3recipes from version requirements.

* Require zope.app.error = 3.5.1

0.10.1 (2007-10-10)
===================

Bug fixes
---------

* buildout.cfg extends versions.cfg to pin down the versions of the
  dependency tree. This should avoid the situation where we release
  Grok, some dependency changes, and Grok breaks as a result. In
  conjunction with this we will also be releasing a new version of
  grokproject that will use this version infrastructure by default.

  For more information about this change, see:
  http://grok.zope.org/releaseinfo/readme.html

0.10 (2007-08-21)
=================

Feature changes
---------------

* Integrated admin user interface.

* Configuration using Martian (http://pypi.python.org/pypi/martian).

* Flash message infrastructure included.

* Adjust dependencies for Grok so that grokproject should work on
  Windows.

Bug fixes
---------

* A fix in Martian where multiple grok.Model or grok.Container classes
  could result in something being found as a context twice.

0.9 series (early 2007 until july 2007)
=======================================

Feature changes
---------------

Grok was released in "continuous release" mode from SVN during this period.

0.1 series (september 2006 until early 2007)
============================================

Feature changes
---------------

Grok was created in september 2006.